[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/scenes/OptionsPage/MusicBox.gd" type="Script" id=1]
[ext_resource path="res://ubuntu-font-family/UB22C3.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/scenes/OptionsPage/GraphicsBox.gd" type="Script" id=3]
[ext_resource path="res://scripts/scenes/OptionsPage/WindowBox.gd" type="Script" id=4]
[ext_resource path="res://scripts/scenes/ResolutionBox.gd" type="Script" id=5]
[ext_resource path="res://scripts/scenes/OptionsPage/VSyncBox.gd" type="Script" id=6]

[sub_resource type="ButtonGroup" id=1]

[sub_resource type="ButtonGroup" id=2]

[sub_resource type="ButtonGroup" id=3]

[sub_resource type="ButtonGroup" id=4]

[sub_resource type="InputEventAction" id=5]
action = "ui_accept"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[node name="OptionsPage" type="Panel"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_right = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MusicBox" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 622.0
margin_top = 5.0
margin_right = 1025.0
margin_bottom = 605.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Label" type="Label" parent="MusicBox"]
margin_right = 403.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Music"
align = 1
valign = 1

[node name="VolumeBox" type="HBoxContainer" parent="MusicBox"]
margin_top = 86.0
margin_right = 403.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MusicBox/VolumeBox"]
margin_right = 403.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Volume"
align = 1
valign = 1

[node name="OffButton" type="Button" parent="MusicBox/VolumeBox"]
visible = false
margin_left = 127.0
margin_right = 250.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = SubResource( 1 )
text = "Muted"
flat = true

[node name="OnButton" type="Button" parent="MusicBox/VolumeBox"]
visible = false
margin_left = 193.0
margin_right = 382.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = SubResource( 1 )
text = "Unmuted"
flat = true

[node name="VolumeBar" type="HSlider" parent="MusicBox"]
margin_top = 172.0
margin_right = 403.0
margin_bottom = 254.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -60.0
max_value = 12.0
rounded = true

[node name="MusicBox" type="HBoxContainer" parent="MusicBox"]
margin_top = 258.0
margin_right = 403.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="Label" type="Label" parent="MusicBox/MusicBox"]
margin_right = 403.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Background"
align = 1
valign = 1

[node name="OffButton" type="Button" parent="MusicBox/MusicBox"]
visible = false
margin_left = 157.0
margin_right = 250.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = SubResource( 2 )
text = "Muted"
flat = true

[node name="OnButton" type="Button" parent="MusicBox/MusicBox"]
visible = false
margin_left = 193.0
margin_right = 382.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = SubResource( 2 )
text = "Unmuted"
flat = true

[node name="MusicBar" type="HSlider" parent="MusicBox"]
margin_top = 344.0
margin_right = 403.0
margin_bottom = 426.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -60.0
max_value = 12.0
rounded = true

[node name="SFXBox" type="HBoxContainer" parent="MusicBox"]
margin_top = 430.0
margin_right = 403.0
margin_bottom = 512.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MusicBox/SFXBox"]
margin_right = 403.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "SFX"
align = 1
valign = 1

[node name="OffButton" type="Button" parent="MusicBox/SFXBox"]
visible = false
margin_left = 127.0
margin_right = 250.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = SubResource( 3 )
text = "Muted"
flat = true

[node name="OnButton" type="Button" parent="MusicBox/SFXBox"]
visible = false
margin_left = 193.0
margin_right = 382.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = SubResource( 3 )
text = "Unmuted"
flat = true

[node name="SFXBar" type="HSlider" parent="MusicBox"]
margin_top = 516.0
margin_right = 403.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -60.0
max_value = 12.0
rounded = true

[node name="GraphicsBox" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 2.0
margin_right = 306.0
margin_bottom = 595.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
script = ExtResource( 3 )

[node name="Label" type="Label" parent="GraphicsBox"]
margin_right = 300.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Graphics"
align = 1
valign = 1

[node name="WindowBox" type="VBoxContainer" parent="GraphicsBox"]
margin_top = 120.0
margin_right = 300.0
margin_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="Label" type="Label" parent="GraphicsBox/WindowBox"]
margin_right = 300.0
margin_bottom = 53.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Window Type"
align = 1
valign = 1

[node name="HBox" type="HBoxContainer" parent="GraphicsBox/WindowBox"]
margin_top = 57.0
margin_right = 300.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PrevButton" type="Button" parent="GraphicsBox/WindowBox/HBox"]
margin_right = 25.0
margin_bottom = 53.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
text = "<"
flat = true

[node name="Label" type="Label" parent="GraphicsBox/WindowBox/HBox"]
margin_left = 29.0
margin_right = 271.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Window Type"
align = 1
valign = 1

[node name="NextButton" type="Button" parent="GraphicsBox/WindowBox/HBox"]
margin_left = 275.0
margin_right = 300.0
margin_bottom = 53.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
text = ">"
flat = true

[node name="ResolutionBox" type="VBoxContainer" parent="GraphicsBox"]
margin_top = 240.0
margin_right = 300.0
margin_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="Label" type="Label" parent="GraphicsBox/ResolutionBox"]
margin_right = 300.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Resolution"
align = 1
valign = 1

[node name="HBox" type="HBoxContainer" parent="GraphicsBox/ResolutionBox"]
margin_top = 57.0
margin_right = 300.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PrevButton" type="Button" parent="GraphicsBox/ResolutionBox/HBox"]
margin_right = 25.0
margin_bottom = 53.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
text = "<"
flat = true

[node name="Label" type="Label" parent="GraphicsBox/ResolutionBox/HBox"]
margin_left = 29.0
margin_right = 271.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Resolution"
align = 1
valign = 1

[node name="NextButton" type="Button" parent="GraphicsBox/ResolutionBox/HBox"]
margin_left = 275.0
margin_right = 300.0
margin_bottom = 53.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
text = ">"
flat = true

[node name="VSyncBox" type="HBoxContainer" parent="GraphicsBox"]
margin_top = 360.0
margin_right = 300.0
margin_bottom = 470.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )

[node name="Label" type="Label" parent="GraphicsBox/VSyncBox"]
margin_right = 97.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "VSync"
align = 1
valign = 1

[node name="OffButton" type="Button" parent="GraphicsBox/VSyncBox"]
margin_left = 101.0
margin_right = 198.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
toggle_mode = true
group = SubResource( 4 )
text = "Off"
flat = true

[node name="OnButton" type="Button" parent="GraphicsBox/VSyncBox"]
margin_left = 202.0
margin_right = 300.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
toggle_mode = true
group = SubResource( 4 )
text = "On"
flat = true

[node name="ApplyButton" type="Button" parent="GraphicsBox"]
margin_top = 480.0
margin_right = 300.0
margin_bottom = 593.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
shortcut = SubResource( 6 )
text = "Apply"
flat = true

